--- a/public/html/classes.html
+++ b/public/html/classes.html
@@ -17,7 +17,7 @@
     <nav class="navbar">
 
         <div class="nav nav-left">
-            <h1 class="logo"><a href="./home.html"><img src="./Logo.PNG"
+            <h1 class="logo"><a href="./home.html"><img src="../images/Logo.PNG"
                         style="display:inline-block; height:40px; width: auto"></a></h1>
             <div><svg style="fill:#ffffff" xmlns="http://www.w3.org/2000/svg" width="40" height="40"
                     viewBox="0 0 18 18">
