--- a/public/html/home.html
+++ b/public/html/home.html
@@ -16,7 +16,7 @@
     <nav class="navbar">
           
         <div class = "nav nav-left">
-            <h1 class="logo"><a href="./home.html"><img src = "./Logo.PNG" style = "display:inline-block; height:40px; width: auto"></a></h1>
+            <h1 class="logo"><a href="./home.html"><img src = "../images/Logo.PNG" style = "display:inline-block; height:40px; width: auto"></a></h1>
             <div><svg style = "fill:#ffffff" xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 18 18"><path d="M12.44 6.44L9 9.88 5.56 6.44 4.5 7.5 9 12l4.5-4.5z"/></svg></div>
         </div>
         <div class="nav nav-right">
@@ -27,7 +27,7 @@
                 <a href="parents.html">Parents</a>
             </div>
             <div onclick="openContextMenu(event, 'image-cropper', '#context-menu')" class="image-cropper profile-button">
-                <img  class = "nav-img" src = "./public/images/Fawad-Khan.jpg">
+                <img  class = "nav-img" src = "../images/Fawad-Khan.jpg">
             </div>
         </div>
 </nav>
@@ -39,7 +39,7 @@
                 <div class = "person">
                     <div class="person-picture">
                         <div class="image-cropper" style = "height:80px; width:80px; ">
-                            <img class = "nav-img" src = "./public/images/Fawad-Khan.jpg">
+                            <img class = "nav-img" src = "../images/Fawad-Khan.jpg">
                         </div>
                     </div>
                     <div class="person-details">
@@ -74,7 +74,7 @@
                     <tr>
                         <td style="width:80px">
                             <div  class="image-cropper profile-button">
-                                <img  class = "nav-img" src = "./public/images/Fawad-Khan.jpg">
+                                <img  class = "nav-img" src = "../images/Fawad-Khan.jpg">
                             </div>
                         </td>
                         <td>
@@ -104,7 +104,7 @@
                     <tr>
                         <td style="width:80px">
                             <div  class="image-cropper profile-button">
-                                <img  class = "nav-img" src = "./public/images/Fawad-Khan.jpg">
+                                <img  class = "nav-img" src = "../images/Fawad-Khan.jpg">
                             </div>
                         </td>
                         <td>
@@ -134,7 +134,7 @@
                     <tr>
                         <td style="width:80px">
                             <div  class="image-cropper profile-button">
-                                <img  class = "nav-img" src = "./public/images/Fawad-Khan.jpg">
+                                <img  class = "nav-img" src = "../images/Fawad-Khan.jpg">
                             </div>
                         </td>
                         <td>
@@ -164,7 +164,7 @@
                         <tr>
                             <td style="width:80px">
                                 <div  class="image-cropper profile-button">
-                                    <img  class = "nav-img" src = "./public/images/Fawad-Khan.jpg">
+                                    <img  class = "nav-img" src = "../images/Fawad-Khan.jpg">
                                 </div>
                             </td>
                             <td>
