--- a/public/html/parents.html
+++ b/public/html/parents.html
@@ -17,7 +17,7 @@
     <nav class="navbar">
 
         <div class="nav nav-left">
-            <h1 class="logo"><a href="./home.html"><img src="./Logo.PNG"
+            <h1 class="logo"><a href="./home.html"><img src="../images/Logo.PNG"
                         style="display:inline-block; height:40px; width: auto"></a></h1>
             <div><svg style="fill:#ffffff" xmlns="http://www.w3.org/2000/svg" width="40" height="40"
                     viewBox="0 0 18 18">
@@ -32,7 +32,7 @@
             </div>
             <div onclick="openContextMenu(event, 'image-cropper', '#profile-picture-context-menu')"
                 class="image-cropper profile-button">
-                <img class="nav-img" src="./public/images/Fawad-Khan.jpg">
+                <img class="nav-img" src="../images/Fawad-Khan.jpg">
             </div>
         </div>
     </nav>
@@ -70,7 +70,7 @@
                     <tr>
                         <!-- <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Fawad-Khan.jpg">
+                                <img class="nav-img" src="../images/Fawad-Khan.jpg">
                             </div>
                         </td> -->
                         <td>
@@ -102,7 +102,7 @@
                     <tr>
                         <!-- <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Fawad-Khan.jpg">
+                                <img class="nav-img" src="../images/Fawad-Khan.jpg">
                             </div>
                         </td> -->
                         <td>
@@ -134,7 +134,7 @@
                     <tr>
                         <!-- <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Fawad-Khan.jpg">
+                                <img class="nav-img" src="../images/Fawad-Khan.jpg">
                             </div>
                         </td> -->
                         <td>
@@ -165,7 +165,7 @@
                     </tr>                    <tr>
                         <!-- <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Fawad-Khan.jpg">
+                                <img class="nav-img" src="../images/Fawad-Khan.jpg">
                             </div>
                         </td> -->
                         <td>
@@ -196,7 +196,7 @@
                     </tr>                    <tr>
                         <!-- <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Fawad-Khan.jpg">
+                                <img class="nav-img" src="../images/Fawad-Khan.jpg">
                             </div>
                         </td> -->
                         <td>
@@ -227,7 +227,7 @@
                     </tr>                    <tr>
                         <!-- <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Fawad-Khan.jpg">
+                                <img class="nav-img" src="../images/Fawad-Khan.jpg">
                             </div>
                         </td> -->
                         <td>
@@ -258,7 +258,7 @@
                     </tr>                    <tr>
                         <!-- <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Fawad-Khan.jpg">
+                                <img class="nav-img" src="../images/Fawad-Khan.jpg">
                             </div>
                         </td> -->
                         <td>
@@ -289,7 +289,7 @@
                     </tr>                    <tr>
                         <!-- <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Fawad-Khan.jpg">
+                                <img class="nav-img" src="../images/Fawad-Khan.jpg">
                             </div>
                         </td> -->
                         <td>
@@ -320,7 +320,7 @@
                     </tr>                    <tr>
                         <!-- <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Fawad-Khan.jpg">
+                                <img class="nav-img" src="../images/Fawad-Khan.jpg">
                             </div>
                         </td> -->
                         <td>
@@ -351,7 +351,7 @@
                     </tr>                    <tr>
                         <!-- <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Fawad-Khan.jpg">
+                                <img class="nav-img" src="../images/Fawad-Khan.jpg">
                             </div>
                         </td> -->
                         <td>
@@ -382,7 +382,7 @@
                     </tr>                    <tr>
                         <!-- <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Fawad-Khan.jpg">
+                                <img class="nav-img" src="../images/Fawad-Khan.jpg">
                             </div>
                         </td> -->
                         <td>
@@ -413,7 +413,7 @@
                     </tr>                    <tr>
                         <!-- <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Fawad-Khan.jpg">
+                                <img class="nav-img" src="../images/Fawad-Khan.jpg">
                             </div>
                         </td> -->
                         <td>
@@ -444,7 +444,7 @@
                     </tr>                    <tr>
                         <!-- <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Fawad-Khan.jpg">
+                                <img class="nav-img" src="../images/Fawad-Khan.jpg">
                             </div>
                         </td> -->
                         <td>
@@ -475,7 +475,7 @@
                     </tr>                    <tr>
                         <!-- <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Fawad-Khan.jpg">
+                                <img class="nav-img" src="../images/Fawad-Khan.jpg">
                             </div>
                         </td> -->
                         <td>
@@ -506,7 +506,7 @@
                     </tr>                    <tr>
                         <!-- <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Fawad-Khan.jpg">
+                                <img class="nav-img" src="../images/Fawad-Khan.jpg">
                             </div>
                         </td> -->
                         <td>
