--- a/public/html/student_information.html
+++ b/public/html/student_information.html
@@ -34,7 +34,7 @@
                 <div class = "person">
                     <div class="person-picture">
                         <div class="image-cropper" style = "height:80px; width:80px; ">
-                            <img class = "nav-img" src = "./public/images/Saad-Bazaz.jpg">
+                            <img class = "nav-img" src = "../images/Saad-Bazaz.jpg">
                         </div>
                     </div>
                     <div class="person-details">
