--- a/public/html/students.html
+++ b/public/html/students.html
@@ -17,7 +17,7 @@
     <nav class="navbar">
 
         <div class="nav nav-left">
-            <h1 class="logo"><a href="./home.html"><img src="./Logo.PNG"
+            <h1 class="logo"><a href="./home.html"><img src="../images/Logo.PNG"
                         style="display:inline-block; height:40px; width: auto"></a></h1>
             <div><svg style="fill:#ffffff" xmlns="http://www.w3.org/2000/svg" width="40" height="40"
                     viewBox="0 0 18 18">
@@ -32,7 +32,7 @@
             </div>
             <div onclick="openContextMenu(event, 'image-cropper', '#profile-picture-context-menu')"
                 class="image-cropper profile-button">
-                <img class="nav-img" src="./public/images/Fawad-Khan.jpg">
+                <img class="nav-img" src="../images/Fawad-Khan.jpg">
             </div>
         </div>
     </nav>
@@ -78,7 +78,7 @@
                     <tr>
                         <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Saad-Bazaz.jpg">
+                                <img class="nav-img" src="../images/Saad-Bazaz.jpg">
                             </div>
                         </td>
                         <td>
@@ -110,7 +110,7 @@
                     <tr>
                         <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Saad-Bazaz.jpg">
+                                <img class="nav-img" src="../images/Saad-Bazaz.jpg">
                             </div>
                         </td>
                         <td>
@@ -142,7 +142,7 @@
                     <tr>
                         <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Saad-Bazaz.jpg">
+                                <img class="nav-img" src="../images/Saad-Bazaz.jpg">
                             </div>
                         </td>
                         <td>
@@ -174,7 +174,7 @@
                     <tr>
                         <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Saad-Bazaz.jpg">
+                                <img class="nav-img" src="../images/Saad-Bazaz.jpg">
                             </div>
                         </td>
                         <td>
@@ -206,7 +206,7 @@
                     <tr>
                         <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Saad-Bazaz.jpg">
+                                <img class="nav-img" src="../images/Saad-Bazaz.jpg">
                             </div>
                         </td>
                         <td>
@@ -238,7 +238,7 @@
                     <tr>
                         <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Saad-Bazaz.jpg">
+                                <img class="nav-img" src="../images/Saad-Bazaz.jpg">
                             </div>
                         </td>
                         <td>
@@ -270,7 +270,7 @@
                     <tr>
                         <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Saad-Bazaz.jpg">
+                                <img class="nav-img" src="../images/Saad-Bazaz.jpg">
                             </div>
                         </td>
                         <td>
@@ -302,7 +302,7 @@
                     <tr>
                         <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Saad-Bazaz.jpg">
+                                <img class="nav-img" src="../images/Saad-Bazaz.jpg">
                             </div>
                         </td>
                         <td>
@@ -334,7 +334,7 @@
                     <tr>
                         <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Saad-Bazaz.jpg">
+                                <img class="nav-img" src="../images/Saad-Bazaz.jpg">
                             </div>
                         </td>
                         <td>
@@ -366,7 +366,7 @@
                     <tr>
                         <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Saad-Bazaz.jpg">
+                                <img class="nav-img" src="../images/Saad-Bazaz.jpg">
                             </div>
                         </td>
                         <td>
@@ -398,7 +398,7 @@
                     <tr>
                         <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Saad-Bazaz.jpg">
+                                <img class="nav-img" src="../images/Saad-Bazaz.jpg">
                             </div>
                         </td>
                         <td>
@@ -430,7 +430,7 @@
                     <tr>
                         <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Saad-Bazaz.jpg">
+                                <img class="nav-img" src="../images/Saad-Bazaz.jpg">
                             </div>
                         </td>
                         <td>
@@ -462,7 +462,7 @@
                     <tr>
                         <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Saad-Bazaz.jpg">
+                                <img class="nav-img" src="../images/Saad-Bazaz.jpg">
                             </div>
                         </td>
                         <td>
@@ -494,7 +494,7 @@
                     <tr>
                         <td style="width:80px">
                             <div class="image-cropper profile-button">
-                                <img class="nav-img" src="./public/images/Saad-Bazaz.jpg">
+                                <img class="nav-img" src="../images/Saad-Bazaz.jpg">
                             </div>
                         </td>
                         <td>
